package NVideoCommon.NTesting.NProtos;

message TInvalidKinopoiskSVODRow {
    required string KinopoiskId = 1;
    optional double FakeDoubleField = 2;
    optional string FakeStringField = 3;
};
